# mulle-match

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  README.md  RELEASENOTES.md  install.sh  installer  mulle-match  mulle-match-to-c  mulle-match-to-cmake  mulle-monitor
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: description.md.bud  environment.md.bud  executables.md.bud  properties.plist  usage.md.bud
dox/: Makefile  mulle-match-match-fs.dot  mulle-match-match.dot  mulle-monitor-match-fs.dot  mulle-monitor-match.dot  mulle-monitor-overview.dot  mulle-monitor-run.dot  mulle-sde-overview.dot
mulle-project/: formula-info.sh  version-info.sh
src/: mulle-match-bash-completion.sh  mulle-match-clean.sh  mulle-match-environment.sh  mulle-match-filename.sh  mulle-match-find.sh  mulle-match-init.sh  mulle-match-list.sh  mulle-match-match.sh  mulle-match-patternfile.sh  mulle-monitor-callback.sh  mulle-monitor-clean.sh  mulle-monitor-find.sh  mulle-monitor-match.sh  mulle-monitor-patternfile.sh  mulle-monitor-process.sh  mulle-monitor-run.sh  mulle-monitor-task.sh
test/: run-test
test/01-pattern/: run-test
test/02-match/: run-test
test/03-find/: run-test
test/06-patternfile/: run-test
test/06-patternfile/.mulle-match/share/ignore.d/: 00-vfl--none
test/11-match/: run-test
test/12-find/: run-test
tests/: mock-fswatch  mock-inotifywait  run-test
tests/01-pattern/: run-test
tests/02-match/: run-test
tests/03-find/: run-test
tests/04-callback/: run-test
tests/05-task/: run-test
tests/06-patternfile/: run-test
tests/06-patternfile/.mulle-monitor/etc/match.d/: 00-bochum--all
tests/06-patternfile/.mulle-monitor/libexec/: foo-task.sh
tests/10-run-fswatch/: create-src-foo-sh-replay.txt  run-test  x.sh
tests/10-run-fswatch/.mulle-monitor/libexec/: hello-task.sh
tests/10-run-inotifywait/: create-src-foo-sh-replay.txt  run-test
tests/11-match/: run-test
tests/12-find/: run-test
